Version 0.53.0 (In Progress)

  * added new capability to allow for variable substitution during configuration file syncing.  Allows delimited
    variables like @variable@ to be replaced by a user-provided value during the sync process. See config.Bar for
    example configuration syntax
  * updated @losf_synced_file_location@ substitution macro to report path relative to $LOSF_CONFIG_DIR

Version 0.52.0 (13 July 2015)

  * added new config option for Warewulf provisioning ([Warewulf/files]). Allows for the 
    specification of additional files to provision - useful for prescribing multiple network interfaces.
  * allow multiple interface definition with Warewulf provisioning
  * propagate [Kernel-Boot-Options-Post] settings in Warewulf provisioning mode
  * allow hosts to be skipped via comment character (#) when using koomie_cf -f <hostfile>
  * allow 'losf reinsert [host]' to proceed when host not previously registered with provisioner
  * add option to 'losf add [host]' command to allow specification of desired node type

Version 0.51.2 (14 April 2015)

  * fix for koomie_cf options parsing

Version 0.51.1 (08 April 2015)

  * fix for use of "losf addpkg" with a chroot environment
  * added support for "--yes" option to losf addpkg

Version 0.51.0 (30 March 2015)

  * disallow addition of custom rpm if the same version/release was cached previously in rpm_topdir
  * minor updates to INSTALL file
  * allow support for node-type specific [Permissions] control
  * update initconfig utility to allow use of previously existing config dirs for initialization
  * include chroot syncing capability for standalone "sync_config_files" utility
  * improve FQDN query for initconfig utility
  * expand regression test suite
  * allow losf -v/--version queries when LOSF_CONFIG_DIR is not valid

Version 0.50.0 (24 November 2014)

  * include support for RHEL7 without need for additional yum downloadonly plugin